Fix Topic title's font size
It was too big below 312px

--- a/src/partials/_pages.scss
+++ b/src/partials/_pages.scss
@@ -40,4 +40,9 @@
     border-radius: 100px;
     margin-right: 1rem;
   }
+
+  //smaller than mobile width
+  @media (max-width: 312px) {
+    font-size: 1.5rem;
+  }
 }
